fix(services): implement lazyload to all pages
